force-app/main/default/objects/SLA_Matrix__mdt/SLA_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>SLA Matrix</label>
    <pluralLabel>SLA Matrixes</pluralLabel>
</CustomObject>