force-app/main/default/objects/SLA_Matrix__mdt/fields/Initial_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Time__c</fullName>
    <label>Initial Response Time</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>