force-app/main/default/objects/SLA_Matrix__mdt/fields/SLA_Level__c.field-meta.xml
<CustomField>
    <fullName>SLA_Level__c</fullName>
    <label>SLA Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
                <default>true</default>
                <label>P1</label>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>