force-app/main/default/objects/SLA_Matrix__mdt/fields/T1_Escalation__c.field-meta.xml
<CustomField>
    <fullName>T1_Escalation__c</fullName>
    <label>T1  Escalation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>