force-app/main/default/objects/SLA_Matrix__mdt/fields/T3_Email__c.field-meta.xml
<CustomField>
    <fullName>T3_Email__c</fullName>
    <label>T3 Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>