force-app/main/default/objects/SLA_Matrix__mdt/fields/T3_Escalation__c.field-meta.xml
<CustomField>
    <fullName>T3_Escalation__c</fullName>
    <label>T3 Escalation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>